fix custom env test

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -40,14 +40,6 @@ on:
         type: string
         default: ""
         description: "(Optional) GCP region to run tests in when API Env is 'Custom'"
-      notify_errors:
-        type: boolean
-        default: false
-        description: "If checked, send any errors in e2e tests to the #proj-api-terraform slack channel"
-      skip_build_from_branch:
-        type: boolean
-        default: false
-        description: "If checked, the latest stable release of the clickhouse terraform plugin is used for the tests"
       run_upgrade_test:
         type: boolean
         default: false
@@ -155,7 +147,7 @@ jobs:
           tf_release: ${{ matrix.tf_release }}
           cloud_provider: ${{ matrix.test.cloud }}
           upgrade_test: "false"
-          skip_build: "${{ !contains(inputs.skip_build_from_branch, 'false') }}"
+          skip_build: "false"
           region: ${{ steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
       - name: cleanup
@@ -225,7 +217,7 @@ jobs:
           tf_release: ${{ matrix.tf_release }}
           cloud_provider: ${{ matrix.test.cloud }}
           upgrade_test: "true"
-          skip_build: "${{ !contains(inputs.skip_build_from_branch, 'false') }}"
+          skip_build: "false"
           region: ${{ steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
       - name: cleanup
@@ -248,7 +240,7 @@ jobs:
     if: ${{ needs.e2e.outputs.status == 'failure' }}
     steps:
       - name: Report Failure on slack
-        if: ${{ needs.e2e.outputs.status == 'failure' && !contains(inputs.notify_errors, 'false') }}
+        if: ${{ needs.e2e.outputs.status == 'failure' }}
         uses: ravsamhq/notify-slack-action@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
