Avoid marking alpha releases as "pre releases"

--- a/.goreleaser-alpha.yml
+++ b/.goreleaser-alpha.yml
@@ -57,7 +57,7 @@ release:
   extra_files:
     - glob: 'terraform-registry-manifest.json'
       name_template: '{{ .ProjectName }}_{{ .Version }}_manifest.json'
-  prerelease: true
+  prerelease: false
   make_latest: false
 changelog:
 # skip: true
