shorten service names during tests to avoid failures

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -65,7 +65,8 @@ jobs:
       - name: Generate
         id: generate
         run: |
-          token="$(date '+%s')"
+          # Number of seconds since January first 2025.
+          token=$(( $(date +%s) - $(date -d "Jan 1, 2025 00:00:00" +%s) ))
           echo "token=${token}" >> $GITHUB_OUTPUT
 
   # Find the most recent release of terraform CLI
