--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -1,10 +1,6 @@
 name: "Run e2e tests"
 description: "Run end to end tests for terraform provider"
 inputs:
-  enable_debug:
-    required: false
-    default: "false"
-    description: "If true it adds TF_LOG=debug to terraform commands"
   api_url:
     required: false
     description: "Full URL of the API service to use. Defaults to the production API endpoint https://api.clickhouse.cloud/v1"
@@ -134,9 +130,7 @@ runs:
           echo "Using '$CLICKHOUSE_API_URL' as API URL"
         fi
                 
-        if [ "${{ inputs.enable_debug }}" == "true" ]; then
-          export TF_LOG=debug
-        fi
+        export TF_LOG=debug
                 
         terraform init -input=false
         terraform plan -no-color -var-file=variables.tfvars
@@ -150,7 +144,7 @@ runs:
         git checkout ${{ github.ref }}        
         echo "::group::Build provider from branch and create terraformrc to use it"
         go get
-        go build -o terraform-provider-clickhouse
+        go build -o terraform-provider-clickhouse -ldflags='-X github.com/ClickHouse/terraform-provider-clickhouse/pkg/project.version=e2e -X github.com/ClickHouse/terraform-provider-clickhouse/pkg/project.commit=${{ github.sha }}'
 
         cat <<EOF >$HOME/.terraformrc
         provider_installation {
@@ -175,10 +169,8 @@ runs:
           echo "Using '$CLICKHOUSE_API_URL' as API URL"
         fi
         
-        if [ "${{ inputs.enable_debug }}" == "true" ]; then
-          export TF_LOG=debug
-        fi
-                
+        export TF_LOG=debug
+                        
         terraform init -input=false -upgrade
         terraform plan -no-color -var-file=variables.tfvars
         terraform apply -no-color -auto-approve -var-file=variables.tfvars
@@ -198,9 +190,7 @@ runs:
           echo "Using '$CLICKHOUSE_API_URL' as API URL"
         fi
         
-        if [ "${{ inputs.enable_debug }}" == "true" ]; then
-          export TF_LOG=debug
-        fi
+        export TF_LOG=debug
         
         terraform destroy -no-color -auto-approve -var-file=variables.tfvars
         echo "::endgroup::"
