--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -44,12 +44,8 @@ on:
         type: boolean
         default: false
         description: "If checked, additionally create service using latest stable version, then upgrade to the current version"
-      enable_debug:
-        type: boolean
-        default: false
-        description: "Enable terraform debug log"
   schedule:
-    - cron: "0 3 * * *"
+    - cron: "0/30 * * * *"
 
 defaults:
   run:
@@ -80,7 +76,7 @@ jobs:
       - uses: ./.github/actions/find-tf-releases
         id: find
         with:
-          count: '1'
+          count: '3'
 
   list-examples:
     outputs:
@@ -138,7 +134,6 @@ jobs:
         id: e2e
         uses: ./.github/actions/e2e
         with:
-          enable_debug: ${{ inputs.enable_debug }}
           api_url: ${{ steps.credentials.outputs.api_url }}
           organization_id: ${{ steps.credentials.outputs.organization_id }}
           token_key: ${{ steps.credentials.outputs.api_key_id }}
@@ -211,7 +206,6 @@ jobs:
         id: upgrade
         uses: ./.github/actions/e2e
         with:
-          enable_debug: ${{ inputs.enable_debug }}
           api_url: ${{ steps.credentials.outputs.api_url }}
           organization_id: ${{ steps.credentials.outputs.organization_id }}
           token_key: ${{ steps.credentials.outputs.api_key_id }}
