--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -238,7 +238,7 @@ jobs:
     if: ${{ needs.e2e.outputs.status == 'failure' }}
     steps:
       - name: Report Failure on slack
-        if: ${{ needs.e2e.outputs.status == 'failure' }}
+        if: ${{ github.ref_name == 'main' && needs.e2e.outputs.status == 'failure' }}
         uses: ravsamhq/notify-slack-action@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
