--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -30,6 +30,10 @@ inputs:
     required: false
     default: "false"
     description: "If true it runs a provider upgrade test"
+  upgrade_from:
+    required: false
+    default: ""
+    description: "What version of the terraform provider to try upgrading from. Defaults to latest release."
   skip_build:
     required: false
     default: "false"
@@ -113,8 +117,14 @@ runs:
       if: ${{ inputs.upgrade_test == 'true' && steps.defined.outputs.defined == 'true' }}
       name: Upgrade test - Retrieve latest stable version
       run: |
-        LATEST="$(curl -s -L -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/ClickHouse/terraform-provider-clickhouse/releases/latest | jq -r '.name')"
-        echo "tag=$LATEST" >> "$GITHUB_OUTPUT"
+        if [ "${{ inputs.upgrade_from }}" == "" ]
+        then
+          # Get latest stable release
+          LATEST="$(curl -s -L -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/ClickHouse/terraform-provider-clickhouse/releases/latest | jq -r '.name')"
+          echo "tag=$LATEST" >> "$GITHUB_OUTPUT"
+        else
+          echo "tag=${{ inputs.upgrade_from }}" >> "$GITHUB_OUTPUT"
+        fi
 
     - shell: bash
       if: ${{ inputs.upgrade_test == 'true' && steps.defined.outputs.defined == 'true' }}
