add gcp tde example with key rotation

--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -85,6 +85,14 @@ runs:
         aws-region: ${{ inputs.region }}
         output-credentials: true
 
+    - name: Configure GCP credentials
+      id: gcp-auth
+      uses: 'google-github-actions/auth@v1'
+      if: ${{ inputs.cloud_provider == 'gcp' }}
+      with:
+        workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+        service_account: 'my-terraform-sa@my-project.iam.gserviceaccount.com'
+
     - shell: bash
       if: ${{steps.defined.outputs.defined == 'true' }}
       name: Set env variables
