--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -123,7 +123,7 @@ runs:
         retry_on_exit_code: 2
         shell: bash
         command: |
-          set -o pipefail
+          set -eo pipefail
           
           if [ "${{ inputs.upgrade_from }}" == "" ]
           then
