--- a/.github/actions/e2e/action.yaml
+++ b/.github/actions/e2e/action.yaml
@@ -112,19 +112,33 @@ runs:
         
         echo "::endgroup::"
 
-    - shell: bash
-      id: get_latest_stable_release
+    - id: get_latest_stable_release
       if: ${{ inputs.upgrade_test == 'true' && steps.defined.outputs.defined == 'true' }}
       name: Upgrade test - Retrieve latest stable version
-      run: |
-        if [ "${{ inputs.upgrade_from }}" == "" ]
-        then
-          # Get latest stable release
-          LATEST="$(curl -s -L -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/ClickHouse/terraform-provider-clickhouse/releases/latest | jq -r '.name')"
-          echo "tag=$LATEST" >> "$GITHUB_OUTPUT"
-        else
-          echo "tag=${{ inputs.upgrade_from }}" >> "$GITHUB_OUTPUT"
-        fi
+      uses: nick-fields/retry@ce71cc2ab81d554ebbe88c79ab5975992d79ba08
+      with:
+        timeout_minutes: 2
+        max_attempts: 3
+        retry_wait_seconds: 0
+        shell: bash
+        command: |
+          set -eo pipefail
+          
+          if [ "${{ inputs.upgrade_from }}" == "" ]
+          then
+            # Get latest stable release
+            LATEST="$(curl -s -L -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/repos/ClickHouse/terraform-provider-clickhouse/releases/latest | jq -r '.name')"
+          
+            if [ "$LATEST" == "null" ]
+            then
+              echo "Error getting latest release"
+              exit 1
+            fi
+          
+            echo "tag=$LATEST" >> "$GITHUB_OUTPUT"
+          else
+            echo "tag=${{ inputs.upgrade_from }}" >> "$GITHUB_OUTPUT"
+          fi
 
     - shell: bash
       if: ${{ inputs.upgrade_test == 'true' && steps.defined.outputs.defined == 'true' }}
