--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -91,6 +91,8 @@ jobs:
         uses: actions/checkout@v4
       - uses: ./.github/actions/list-examples
         id: list
+        with:
+          ignore: 'pci'
 
   # Run e2e tests
   e2e:
@@ -148,7 +150,7 @@ jobs:
           cloud_provider: ${{ matrix.test.cloud }}
           upgrade_test: "false"
           skip_build: "false"
-          region: ${{ steps.credentials.outputs.region }}
+          region: ${{ contains(fromJSON('["hipaa", "pci"]'), matrix.test.name) && steps.credentials.outputs.compliance_region || steps.credentials.outputs.region }}
           aws_role_arn: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
       - name: cleanup
         if: ${{ always() && matrix.test.cloud == 'aws' }}
