--- a/.github/actions/cleanup-clickhouse/action.yaml
+++ b/.github/actions/cleanup-clickhouse/action.yaml
@@ -21,7 +21,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: cleanup clikchouse
+    - name: cleanup clickhouse
       shell: bash
       run: |
         api_url="${{ inputs.api_url }}"
@@ -33,26 +33,26 @@ runs:
         token_key="${{ inputs.token_key }}"
         token_secret="${{ inputs.token_secret }}"
         suffix="${{ inputs.token }}"
-        
+
         echo "Deleting any service with suffix ${suffix}"
-        
+
         while :; do
           output="$(curl -su ${token_key}:${token_secret} ${api_url}/organizations/${organization_id}/services)"
           ids=$(echo "$output"|jq --arg suffix "${suffix}" -r '.result[]| select(.name | endswith($suffix)) |(.id + "," + .state)')
-        
+
           if [ "$ids" == "" ]
           then
             break
           fi
-        
+
           count="$(echo "$ids"|wc -l)"
           echo "There are ${count} services to be cleaned up"
-        
+
           for idandstatus in $ids
           do
             id="$(echo "${idandstatus}" | cut -d"," -f1)"
             status="$(echo "${idandstatus}" | cut -d"," -f2)"
-        
+
             case "$status" in
             stopped)
               echo "Deleting service ${id}"
@@ -67,8 +67,8 @@ runs:
               ;;
             esac
           done
-        
+
           sleep 5
         done
-        
+
         echo "Cleanup complete"
