--- a/.github/workflows/shellcheck.yaml
+++ b/.github/workflows/shellcheck.yaml
@@ -14,6 +14,11 @@ jobs:
     permissions:
       pull-requests: read
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+        with:
+          ref: github.event.pull_request.head.sha
+
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@ed68ef82c095e0d48ec87eccea555d944a631a4c
