need to be a variable

--- a/.github/workflows/shellcheck.yaml
+++ b/.github/workflows/shellcheck.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
         with:
-          ref: github.event.pull_request.head.sha
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Get changed files
         id: changed-files
